# onyx-analysis-helper

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docker.yml  test-build.yml
src/mscape_template/: mscape_functions.py  mscape_script.py
src/onyx_analysis_helper/: onyx_analysis_helper_functions.py
tests/: conftest.py  test_functions.py  test_onyx_analysis_helper.py
tests/test_data/: example_onyx_analysis.json  example_onyx_analysis_fail.json
