[project] # Update all fields in this section
name = "project-name-here" 
version = "0.1.0" 
description = "Short description here"
authors = [{name = "Author name", email = "email.address@example.com"}] 
requires-python = ">=3.12" 
dependencies = ["pandas", "pyyaml", "climb-onyx-client"] 

[tool.setuptools.dynamic]
version = {attr = "project_name_here.__version__"} # Add underscore separated repo name here

[project.optional-dependencies] # Dependencies for developers only - add more if required
dev = ["ruff>=0.4.10,<0.5", "pytest", "pre-commit"] 

[build-system] # Leave this section
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts] # Update with main repo script here
qc_sample = "project_name_here.main_script:main"

[tool.ruff.lint] # Lint rules to follow - add or delete if required
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # comprehesnions
    "C4",
    # pathlib
    "PTH",
]

ignore = ["E501"] # Lint rules to ignore - add or remove as required

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
