[project] # Update all fields in this section
name = "onyx-analysis-helper"
version = "0.1.0"
description = "Repository containing helper functions to support interactions with onyx analysis tables"
authors = [{name = "Deborah Greer", email = "deborah.greer@ukhsa.gov.uk"}]
requires-python = ">=3.12"
dependencies = ["climb-onyx-client", "pandas"]

[tool.setuptools.dynamic]
version = {attr = "onyx_analysis_helper.__version__"} # Add underscore separated repo name here

[project.optional-dependencies] # Dependencies for developers only - add more if required
dev = ["ruff>=0.4.10,<0.5", "pytest", "pre-commit", "regex"]

[build-system] # Leave this section
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

#[project.scripts] # Update with main repo script here
#qc_sample = "project_name_here.main_script:main"

[tool.ruff.lint] # Lint rules to follow - add or delete if required
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # comprehesnions
    "C4",
    # pathlib
    "PTH",
]

ignore = ["E501"] # Lint rules to ignore - add or remove as required

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
